Fix file e migliore organizzazione
wow proprio necessaria la cartella delle immagini per solo due immagini eh :100:

--- a/main.tex
+++ b/main.tex
@@ -63,7 +63,7 @@
 
 	\vspace{1.5cm}
 
-	\includegraphics[scale=0.6]{ab6.jpg}
+	\includegraphics[scale=0.6]{./img/ab6.jpg}
 
 	\vspace{1.5cm}
 
@@ -90,7 +90,7 @@
 
 	\begin{figure}[htb!]
 		\centering
-		\includegraphics[width=4cm]{qr.png}
+		\includegraphics[width=4cm]{./img/qr.png}
 		\caption{QR Code alla repository di GitHub}
 	\end{figure}
 \end{abstract}
